--- a/public/styles/twitchkeeper.css
+++ b/public/styles/twitchkeeper.css
@@ -12,3 +12,6 @@
 .img {
   height: 100px;
 }
+.megabox {
+  background-color: #e2f7ff;
+}
